Fix center text and spacing

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ item 2 */
 
 body {
     margin: 0;
-    font-family: optima;
+    /* font-family: optima; */
 }
 
 .header {
@@ -76,6 +76,11 @@ a {
     align-items: center;
 }
 
+#members_section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .section.founding {
     background-color: black;
@@ -92,7 +97,7 @@ a {
 .HeroMain {
     color: white;
     font-size: 48px;
-    margin-bottom: 32px;
+    /* margin-bottom: 32px; */
     font-weight: bolder;
     /* text-shadow: -0.5px -0.5px 0 gray, .5px -.5px 0 gray, -.5px .5px 0 gray, .5px .5px 0 gray; */
 }
@@ -101,6 +106,7 @@ a {
     color: white;
     font-size: 24px;
     max-width: 85ch;
+    text-align: center;
     /* text-shadow: -0.3px -0.3px 0 grey, .3px -.3px 0 grey, -.3px .3px 0 grey, .3px .3px 0 gray; */
     /* text-shadow: -0.3px -0.3px 0 darkgrey, .3px -.3px 0 darkgrey, -.3px .3px 0 darkgrey, .3px .3px 0 darkgrey; */
 }
@@ -424,6 +430,7 @@ button {
     padding: 8px 16px;
     margin: 8px 0;
     cursor: pointer;
+    font-weight: bold;
   }
 
 button.action-button {
